ça me derange un peu la

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar.host.url>http://gpu-epu.univ-savoie.fr:9000</sonar.host.url>
-        <sonar.login>theo</sonar.login>
-        <sonar.password>theo</sonar.password>
+        <sonar.login>sqp_e363ec75af0e797ff6a064b4db45eaaa5deab55d</sonar.login>
 
     </properties>
 
