--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
             <!-- Ajoutez le plugin SonarQube -->
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
+                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.7.0.1746</version>
             </plugin>
