--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <sonar.host.url>http://gpu-epu.univ-savoie.fr:9000</sonar.host.url>
-        <sonar.projectKey>INFO832_theo</sonar.projectKey>
-        <sonar.token>sqp_d60e7eb5dabd336255a0b51b5d685172c91fdd6b</sonar.token>
+        <sonar.projectKey>INFO832_Projet_theo</sonar.projectKey>
+        <sonar.token>sqp_abc2687d7db6df8b5f75fef6cbfb2d41ad7de295</sonar.token>
 
     </properties>
 
